[package]
name = "leapdebug"
version = "0.1.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libodm = { version = "0.1.0", path = "../libodm"}
fern = "0.6.0"
log = "0.4.14"
chrono = "0.4.19"