[package]
name = "libodm"
version = "0.1.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.95"
log = "0.4.14"
# glam = "0.15.2"
# opencv = "0.53.0"

[build-dependencies]
cc = "1.0"